--- a/definition.yml
+++ b/definition.yml
@@ -3,7 +3,7 @@ docker_repository: dynverse/ti_scoup
 singularity_collection: 1576
 container_url: https://github.com/dynverse/ti_scoup
 name: SCOUP
-type: algorithm
+source: tool
 platform: C++
 doi: 10.1186/s12859-016-1109-3
 google_scholar_cluster_id: '16676054631565429360'
